--- a/Docker/POS-docker-compose.yml
+++ b/Docker/POS-docker-compose.yml
@@ -11,15 +11,15 @@ services:
               "--rpc-http-enabled",
               "--rpc-http-cors-origins=*",
               "--rpc-http-api=ETH,NET,CLIQUE,DEBUG,MINER,NET,PERM,ADMIN,EEA,TXPOOL,PRIV,WEB3",
-              "--engine-jwt-secret=/var/lib/besu/data/token.txt",
+              "--engine-jwt-secret=jwtsecret.hex",
               "--engine-host-allowlist=*",
               "--engine-rpc-enabled=true"]
     volumes:
       - ./besu:/var/lib/besu/data
     ports:
       # Map the p2p port(30303), RPC HTTP port(8545), and engine port (8551)
-      - "8545:8545"
-      - "8551:8551"
+      - "18545:8545"
+      - "18551:8551"
       - "30303:30303/tcp"
       - "30303:30303/udp"
 
