--- a/package.json
+++ b/package.json
@@ -25,8 +25,6 @@
     "web3": "^1.8.1"
   },
   "dependencies": {
-    "@usedapp/core": "^1.2.2",
-    "dotenv": "^16.0.3",
-    "ethers": "^5.7.2"
+    "dotenv": "^16.0.3"
   }
 }
