--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "web3": "^1.8.1"
   },
   "dependencies": {
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "package.json": "^2.0.1"
   }
 }
