--- a/frontend/my-eth-app/package.json
+++ b/frontend/my-eth-app/package.json
@@ -23,5 +23,9 @@
     "packages": [
       "packages/*"
     ]
+  },
+  "license": "GPL-3.0",
+  "dependencies": {
+    "typescript": "^4.9.5"
   }
 }
