--- a/frontend/my-eth-app/packages/react-app/package.json
+++ b/frontend/my-eth-app/packages/react-app/package.json
@@ -31,6 +31,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-scripts": "4.0.3",
+    "react-router": "6.8.1",
     "styled-components": "^5.3.3"
   },
   "eslintConfig": {
