--- a/frontend/my-eth-app/packages/react-app/package.json
+++ b/frontend/my-eth-app/packages/react-app/package.json
@@ -15,10 +15,10 @@
     ]
   },
   "dependencies": {
-    "@my-app/contracts": "^1.0.0",
     "@apollo/client": "^3.5.10",
     "@ethersproject/contracts": "^5.6.0",
     "@ethersproject/providers": "^5.6.0",
+    "@my-app/contracts": "^1.0.0",
     "@testing-library/dom": "^8.11.3",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
@@ -30,8 +30,9 @@
     "ipfs-deploy": "^11.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-scripts": "4.0.3",
+    "react-hook-form": "^7.43.5",
     "react-router-dom": "6.8.1",
+    "react-scripts": "4.0.3",
     "styled-components": "^5.3.3"
   },
   "eslintConfig": {
