--- a/frontend/my-eth-app/packages/react-app/package.json
+++ b/frontend/my-eth-app/packages/react-app/package.json
@@ -42,10 +42,10 @@
     ]
   },
   "scripts": {
-    "build": "react-scripts build",
+    "build": "react-scripts --openssl-legacy-provider build",
     "eject": "react-scripts eject",
     "ipfs": "yarn build && ipfs-deploy build/",
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "test": "react-scripts test"
   },
   "license": "GPL-3.0"
