--- a/frontend/my-eth-app/package.json
+++ b/frontend/my-eth-app/package.json
@@ -22,6 +22,7 @@
   },
   "license": "GPL-3.0",
   "dependencies": {
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "yarn": "^1.22.19"
   }
 }
